--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "vee-validate": "^2.0.0-rc.23",
-    "vue": "^2.4.4"
+    "vue": "^2.4.4",
+    "vue-resource": "^1.3.4"
   },
   "browserslist": [
     "> 1%",
