--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.17.1",
     "vee-validate": "^2.0.0-rc.23",
     "vue": "^2.4.4",
-    "vue-resource": "^1.3.4"
+    "vue-resource": "^1.3.4",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
