--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --watch",
+    "build": "cross-env NODE_ENV=production webpack src/main.js dist/build.js --progress --hide-modules --watch"
   },
   "dependencies": {
     "axios": "^0.17.1",
