--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.4",
     "foundation-sites": "^6.4.4-rc1",
     "node-sass": "^4.5.3",
